components/fia-auth/envs/production/fia-auth.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fia-auth
  namespace: fia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fia-auth
  template:
    metadata:
      labels:
        app: fia-auth
    spec:
      containers:
        - name: fia-auth
          image: ghcr.io/fiaisis/fia-auth@sha256:57a94b718bc6802e8250391eeddc9a2ee3203797801144dda880db38d15312b4
